cluster/apps/forgejo/ssh-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh-tailscale
  namespace: forgejo
  annotations:
    tailscale.com/hostname: forgejo-ssh
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 222
