cluster/apps/forgejo/https-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-tailscale
  namespace: forgejo
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - forgejo
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  number: 5000
